# import-cruiser

./: .copilotignore  .gitignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  import-cruiser.json  pyproject.toml  pyrightconfig.json
.github/workflows/: workflow.yml
artifacts/: import-cruiser-self.html
artifacts/self-graph/: import-cruiser-self-graph.dot  import-cruiser-self-graph.html
scripts/: check_architecture_boundaries.py  check_code_budgets.py  check_init_exports.py  check_no_docs_dir.sh  check_no_hardcoded_paths.py  check_no_md_in_src_tests.sh  check_no_raw_sql.py  check_no_untyped_collections.py  check_root_files.py  check_structural_metrics.py  check_tests_match_src.py  refresh_self_graph.sh  run_targeted_unit_tests.py  vulture_whitelist.py
src/import_cruiser/: __init__.py  analyzer.py  cli.py  config.py  detector.py  exporter.py  graph.py  validator.py
src/pydepend/: __init__.py  analyzer.py  cli.py  config.py  detector.py  exporter.py  graph.py  validator.py
tests/: test_analyzer.py  test_archi_render.py  test_cli.py  test_config.py  test_depcruise_alignment.py  test_detector.py  test_exporter.py  test_graph.py  test_graph_basics.py  test_integration_and_coverage.py  test_validator.py
tests/fixtures/collapse_demo/src/dep_demo/: app.py  cli.py
tests/fixtures/collapse_demo/src/dep_demo/api/: http.py
tests/fixtures/collapse_demo/src/dep_demo/core/: repo.py  service.py
tests/fixtures/collapse_demo/src/dep_demo/domain/: order.py
tests/fixtures/collapse_demo/src/dep_demo/infra/: db.py  queue.py
tests/fixtures/collapse_demo/src/dep_demo/shared/: events.py  types.py
tests/fixtures/collapse_demo/src/dep_demo/ui/: state.py  web.py
tests/fixtures/collapse_demo/src/dep_demo/worker/: jobs.py
tests/fixtures/complex_project/src/risk_like/app/: service.py
tests/fixtures/complex_project/src/risk_like/app/api/: routes.py
tests/fixtures/complex_project/src/risk_like/config/: settings.py
tests/fixtures/complex_project/src/risk_like/domain/: model.py
tests/fixtures/complex_project/src/risk_like/infra/: db.py  repo.py
tests/fixtures/complex_project/src/risk_like/shared/: env.py  types.py
tests/fixtures/riskstudio_like/sdk/src/sdk_core/: __init__.py  config.py  session.py
tests/fixtures/riskstudio_like/sdk/src/sdk_modules/events/: __init__.py  models.py
tests/fixtures/riskstudio_like/sdk/src/sdk_modules/products/: __init__.py  service.py
tests/fixtures/riskstudio_like/worker/src/worker_app/: __init__.py  handlers.py
tests/fixtures/riskstudio_like/worker/src/worker_core/: __init__.py  runtime.py
tests/fixtures/sample_projects/proj_a/src/proj_a/: __init__.py
tests/fixtures/sample_projects/proj_a/src/proj_a/app/: api.py
tests/fixtures/sample_projects/proj_a/src/proj_a/app/domain/: model.py
tests/fixtures/sample_projects/proj_b/src/proj_b/: __init__.py
