[tool.poetry]
name = "pydepend"
version = "0.1.0"
description = "Analyze, validate, and visualize Python import dependencies — like dependency-cruiser for Python."
authors = ["kevin91nl"]
readme = "README.md"
license = "MIT"
packages = [{ include = "pydepend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.scripts]
pydepend = "pydepend.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/pydepend"]

[tool.coverage.report]
show_missing = true
