[tool.poetry]
name = "import-cruiser"
version = "0.1.0"
description = "Analyze, validate, and visualize Python import dependencies — like dependency-cruiser for Python."
authors = ["kevin91nl"]
readme = "README.md"
license = "MIT"
packages = [{ include = "import_cruiser", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.scripts]
import-cruiser = "import_cruiser.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/import_cruiser"]

[tool.coverage.report]
show_missing = true
