[tool.poetry]
name = "import-cruiser"
version = "0.2.4"
description = "Analyze, validate, and visualize Python import dependencies — like dependency-cruiser for Python."
authors = ["kevin91nl"]
readme = "README.md"
license = "MIT"
packages = [{ include = "import_cruiser", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.scripts]
import-cruiser = "import_cruiser.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short --cov=src/import_cruiser --cov-fail-under=100"

[tool.coverage.run]
source = ["src/import_cruiser"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.main]
jobs = 0
ignore-paths = ["tests/fixtures"]

[tool.pylint.messages_control]
disable = ["all"]
enable = ["duplicate-code", "function-redefined"]

[tool.import_cruiser_metrics]
max_instability = 1.0
indirection_allowlist = ["import_cruiser.detector._normalise_cycle"]

[tool.import_cruiser_code_budget]
file_allowlist = [
  "src/import_cruiser/cli.py",
  "src/import_cruiser/exporter.py",
]
function_allowlist = [
  "import_cruiser.analyzer._collect_imports",
  "import_cruiser.cli._apply_graph_options",
  "import_cruiser.exporter.export_dot",
  "import_cruiser.exporter._html_with_svg",
  "import_cruiser.graph.aggregate_by_path",
]
